Fix PageHeader align

--- a/src/components/PageHeader/index.less
+++ b/src/components/PageHeader/index.less
@@ -69,6 +69,9 @@
   .main {
     flex: 0 1 auto;
   }
+  .content {
+    flex: auto;
+  }
   .main {
     width: 100%;
   }
